Adding the impl for adding availability slots
