# src/main/java/com/saha/model/UserAvailableSlotEntity.java
@@ -1,12 +1,19 @@
 package com.saha.model;
 
+import com.saha.rest.model.User;
+import com.saha.rest.model.UserAvailabilitySlot;
+
 import javax.persistence.*;
+import java.text.DateFormat;
+import java.text.FieldPosition;
+import java.text.ParseException;
+import java.text.ParsePosition;
 import java.util.Date;
 import java.util.Objects;
 
 @Entity
 @Table(name = "available_slot")
-public class AvailableSlotEntity {
+public class UserAvailableSlotEntity {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -59,12 +66,27 @@ public class AvailableSlotEntity {
     public boolean equals(Object o) {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
-        AvailableSlotEntity that = (AvailableSlotEntity) o;
+        UserAvailableSlotEntity that = (UserAvailableSlotEntity) o;
         return Objects.equals(id, that.id) && Objects.equals(calendarEntity, that.calendarEntity) && Objects.equals(startTime, that.startTime) && Objects.equals(endTime, that.endTime);
     }
 
     @Override
     public int hashCode() {
         return Objects.hash(id, calendarEntity, startTime, endTime);
+    }
+
+    public UserAvailabilitySlot toDTO() {
+        UserAvailabilitySlot userAvailabilitySlot = new UserAvailabilitySlot();
+        userAvailabilitySlot.setId(this.getId());
+        userAvailabilitySlot.setCalendarId(this.getCalendarEntity().getId());
+        userAvailabilitySlot.setStartTime(this.getStartTime().toString());
+        userAvailabilitySlot.setEndTime(this.getEndTime().toString());
+        return userAvailabilitySlot;
+    }
+
+    public void fromDTO(UserAvailabilitySlot userAvailabilitySlot, UserEntity userEntity) throws ParseException {
+        this.setCalendarEntity(userEntity.getCalendarEntity());
+        this.setStartTime(DateFormat.getInstance().parse(userAvailabilitySlot.getStartTime()));
+        this.setEndTime(DateFormat.getInstance().parse(userAvailabilitySlot.getEndTime()));
     }
 }
