# src/main/resources/user_openapi.yml
@@ -23,7 +23,7 @@ externalDocs:
   url: 'http://swagger.io'
 
 paths:
-  /users:
+  '/users':
     get:
       tags:
         - user
@@ -53,6 +53,8 @@ paths:
       summary: Create a new user
       description: Creates a new user for given payload and returns the id.
       operationId: createUser
+      requestBody:
+        $ref: '#/components/requestBodies/User'
       responses:
         '201':
           description: Created successfully
@@ -76,8 +78,6 @@ paths:
           description: Forbidden
         '409':
           description: Conflict. user with given details already exists.
-      requestBody:
-        $ref: '#/components/requestBodies/User'
 
   '/users/{user-id}':
     parameters:
@@ -111,6 +111,8 @@ paths:
       summary: Update existing user using JSON representation.
       description: Update existing user using JSON representation.
       operationId: updateUser
+      requestBody:
+        $ref: '#/components/requestBodies/User'
       responses:
         '200':
           description: Updated Successfully
@@ -126,8 +128,6 @@ paths:
           description: Forbidden
         '404':
           description: user with given id Not Found
-      requestBody:
-        $ref: '#/components/requestBodies/User'
 
     delete:
       tags:
@@ -147,9 +147,59 @@ paths:
         '404':
           description: User with given id Not Found
 
+  '/users/{user-id}/availability':
+    parameters:
+      - $ref: '#/components/parameters/userId'
+
+    post:
+      tags:
+        - user-availability
+      summary: Create a new availability for a given user
+      description: Creates a new availability for a given user and returns the id.
+      operationId: createUserAvailabilitySlot
+      requestBody:
+        $ref: '#/components/requestBodies/UserAvailabilitySlot'
+      responses:
+        '201':
+          description: Created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserAvailabilitySlot'
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '409':
+          description: Conflict.
+
+    get:
+      tags:
+        - user-availability
+      summary: Returns a list of the given user's availability.
+      description: |
+        Returns list of all the availability slots for a given user. <br>
+      operationId: getUserAvailabilitySlots
+      responses:
+        '200':
+          description: Fetched successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserAvailabilitySlots'
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+
 components:
   schemas:
-
     Users:
       type: array
       items:
@@ -179,6 +229,41 @@ components:
         firstName: "Sumit"
         lastName: "Saha"
 
+    UserAvailabilitySlots:
+      type: array
+      items:
+        $ref: '#/components/schemas/UserAvailabilitySlot'
+
+    UserAvailabilitySlot:
+      description: "User Availability Slot definition"
+      type: object
+      properties:
+        id:
+          description: User does not need to provide this. Will be generated by system and returned in response.
+          type: integer
+          format: int64
+          readOnly: true
+        calendarId:
+          description: Id of the calendar in which the availability slot is.
+          type: integer
+          format: int64
+        startTime:
+          description: The date in the following format :- DD/MM/YYYY HH:MM
+          type: string
+          example: "01/01/2019 12:00"
+        endTime:
+          description: The date in the following format :- DD/MM/YYYY HH:MM
+          type: string
+          example: "01/01/2019 15:00"
+      required:
+        - calendarId
+        - startTime
+        - endTime
+      example:
+        calendarId: 1
+        firstName: "01/01/2019 12:00"
+        lastName: "01/01/2019 15:00"
+
   parameters:
     userId:
       in: path
@@ -196,4 +281,10 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/User'
+
+    UserAvailabilitySlot:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/UserAvailabilitySlot'
 
